JsBpmnHelper work on tests