@@ -1,10 +1,17 @@
 package com.protectline.util;
 
+import org.xmlunit.builder.DiffBuilder;
+import org.xmlunit.diff.Diff;
+import org.xmlunit.diff.Difference;
+import org.xmlunit.diff.DifferenceEvaluator;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.util.Iterator;
 
+import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class FileUtil {
@@ -28,35 +35,27 @@ public class FileUtil {
     }
 
     public static void compareBpmnFiles(Path bpmnFile, Path expectedModify) throws IOException {
-        byte[] modifiedContent = Files.readAllBytes(bpmnFile);
-        byte[] expectedContent = Files.readAllBytes(expectedModify);
+        String modifiedContent = Files.readString(bpmnFile);
+        String expectedContent = Files.readString(expectedModify);
+        
 
-        if (!java.util.Arrays.equals(modifiedContent, expectedContent)) {
-            System.out.println("=== FICHIERS DIFFÉRENTS ===");
-            System.out.println("Fichier modifié (" + bpmnFile + "):");
-            System.out.println(new String(modifiedContent));
-            System.out.println("\n=== FICHIER ATTENDU ===");
-            System.out.println("Fichier attendu (" + expectedModify + "):");
-            System.out.println(new String(expectedContent));
-            System.out.println("\n=== DIFFÉRENCES ===");
+        Diff myDiff = DiffBuilder.compare(expectedContent)
+                .withTest(modifiedContent)
+                .normalizeWhitespace()
+                .ignoreComments()
+                .ignoreWhitespace()
+                .build();
 
-            String[] modifiedLines = new String(modifiedContent).split("\n");
-            String[] expectedLines = new String(expectedContent).split("\n");
 
-            int maxLines = Math.max(modifiedLines.length, expectedLines.length);
-            for (int i = 0; i < maxLines; i++) {
-                String modLine = i < modifiedLines.length ? modifiedLines[i] : "<MISSING>";
-                String expLine = i < expectedLines.length ? expectedLines[i] : "<MISSING>";
-
-                if (!modLine.equals(expLine)) {
-                    System.out.println("Ligne " + (i + 1) + ":");
-                    System.out.println("  Modifié : " + modLine);
-                    System.out.println("  Attendu : " + expLine);
-                }
-            }
+        Iterator<Difference> iter = myDiff.getDifferences().iterator();
+        int size = 0;
+        while (iter.hasNext()) {
+            String diff = iter.next().toString();
+            System.out.println(diff);
+            size++;
         }
 
-        assertTrue(java.util.Arrays.equals(modifiedContent, expectedContent));
+        assertThat(size).isEqualTo(0);
     }
 
 }
